--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#team">Team</a></li>
-          <li class="drop-down"><a href="">Drop Down</a>
+          <li class="active"><a href="#top">Home</a></li>
+          <li><a href="#biografia">Biogafia</a></li>
+          <li><a href="#portfolio">Portfólio</a></li>
+          <li><a href="#depoimentos">Depoimentos</a></li>
+          <!--li><a href="#team">Team</a></li>
+          <li><a href="">Drop Down</a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="drop-down"><a href="#">Deep Drop Down</a>
@@ -68,21 +68,21 @@
               <li><a href="#">Drop Down 2</a></li>
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
-            </ul>
+            </ul-->
           </li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#contato">Contato</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
 
-      <a href="#about" class="get-started-btn scrollto">Get Started</a>
+      <a href="#biografia" class="get-started-btn scrollto">Começar Tour</a>
 
     </div>
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center justify-content-center">
-    <div class="container" data-aos="fade-up">
+    <div class="container" data-aos="fade-up" id="top">
 
       <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
         <div class="col-xl-6 col-lg-8">
@@ -130,7 +130,7 @@
   <main id="main">
 
     <!-- ======= About Section ======= -->
-    <section id="about" class="about">
+    <section id="biografia" class="about">
       <div class="container" data-aos="fade-up">
 
         <div class="row">
@@ -159,7 +159,7 @@
     </section><!-- End About Section -->
 
     <!-- ======= Clients Section ======= -->
-    <section id="clients" class="clients">
+    <!--section id="clients" class="clients">
       <div class="container" data-aos="zoom-in">
 
         <div class="owl-carousel clients-carousel">
@@ -174,10 +174,10 @@
         </div>
 
       </div>
-    </section><!-- End Clients Section -->
+    </section--><!-- End Clients Section -->
 
     <!-- ======= Features Section ======= -->
-    <section id="features" class="features">
+    <!--section id="features" class="features">
       <div class="container" data-aos="fade-up">
 
         <div class="row">
@@ -207,10 +207,10 @@
         </div>
 
       </div>
-    </section><!-- End Features Section -->
+    </section--><!-- End Features Section -->
 
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
+    <!--section id="services" class="services">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -270,7 +270,7 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section--><!-- End Services Section -->
 
     <!-- ======= Cta Section ======= -->
     <section id="cta" class="cta">
@@ -285,19 +285,19 @@
       </div>
     </section><!-- End Cta Section -->
 
-    <!-- ======= Portfolio Section ======= -->
+    <!-- ======= Portfólio Section ======= -->
     <section id="portfolio" class="portfolio">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
-          <p>Check our Portfolio</p>
+          <h2>Portfólio</h2>
+          <p>Confira nosso Portfólio</p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
+              <li data-filter="*" class="filter-active">Tudo</li>
               <li data-filter=".filter-app">App</li>
               <li data-filter=".filter-card">Card</li>
               <li data-filter=".filter-web">Web</li>
@@ -436,10 +436,10 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section><!-- End Portfólio Section -->
 
     <!-- ======= Counts Section ======= -->
-    <section id="counts" class="counts">
+    <!--section id="counts" class="counts">
       <div class="container" data-aos="fade-up">
 
         <div class="row no-gutters">
@@ -488,10 +488,10 @@
         </div>
 
       </div>
-    </section><!-- End Counts Section -->
+    </section--><!-- End Counts Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials">
+    <section id="depoimentos" class="testimonials">
       <div class="container" data-aos="zoom-in">
 
         <div class="owl-carousel testimonials-carousel">
@@ -557,7 +557,7 @@
     </section><!-- End Testimonials Section -->
 
     <!-- ======= Team Section ======= -->
-    <section id="team" class="team">
+    <!--section id="team" class="team">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -642,7 +642,7 @@
         </div>
 
       </div>
-    </section><!-- End Team Section -->
+    </section--><!-- End Team Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
